--- a/ohos/battery_info/BUILD.gn
+++ b/ohos/battery_info/BUILD.gn
@@ -23,6 +23,7 @@ ohos_cangjie_shared_library("ohos.battery_info") {
   ]
 
   cj_external_deps = [
+    "cangjie_ark_interop:ohos.business_exception",
     "cangjie_ark_interop:ohos.labels",
   ]
 
