--- a/ohos/battery_info/BUILD.gn
+++ b/ohos/battery_info/BUILD.gn
@@ -17,10 +17,15 @@ import("//build/ohos.gni")
 import("//build/templates/cangjie/cjc.gni")
 
 ohos_cangjie_shared_library("ohos.battery_info") {
-  sources = [
-    "battery_info.cj",
-    "native.cj",
-  ]
+
+  if (is_mingw || is_mac){
+    sources = [ "../../mock/ohos.battery_info.cj" ]
+  } else {
+    sources = [
+      "battery_info.cj",
+      "native.cj",
+    ]
+  }
 
   cj_external_deps = [
     "cangjie_ark_interop:ohos.business_exception",
